--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -134,7 +134,7 @@ highlightCurrentMenuArea = true
   # globalWidgetPosition = "Right"
 
 [verification]
-  # google = ""
+  google = "FENINHEsjSNb69B0sJD3Vp4_E6WPHB4d22NLxyUJhgQ"
   # bing = ""
   # pinterest = ""
   # yandex = ""
